# silkedit

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Gruntfile.js  LICENSE.md  README.md  SilkEdit.nuspec  appveyor.yml  build.bat  build.xml  conanfile.txt  ivy.xml  ivysettings.xml  main.cpp  main.go  mainWindow.cpp  mainWindow.h  package.json  project.json  run  run.bat  run~  silkedit.iss  sk.cpp  sk.iss  sk.pro  viEditView.cpp  viEditView.h
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
benchmark/testdata/: syntaxHighlightBenchmark.cpp
core/: AndConditionExpression.cpp  AndConditionExpression.h  ArgumentArray.h  AutoUpdateManager.cpp  AutoUpdateManager.h  AutoUpdater.h  BOM.cpp  BOM.h  CMakeLists.txt  CommandArgument.h  Completer.cpp  Completer.h  Condition.cpp  Condition.h  ConditionExpression.cpp  ConditionExpression.h  ConditionManager.cpp  ConditionManager.h  Config.cpp  Config.h  ConfigDefinition.h  ConfigManager.cpp  ConfigManager.h  ConfigModel.cpp  ConfigModel.h  Constants.cpp  Constants.h  ConstructorStore.cpp  ConstructorStore.h  Document.cpp  Document.h  Encoding.cpp  Encoding.h  Event.h  Font.cpp  Font.h  FunctionInfo.h  HistoryModel.cpp  HistoryModel.h  ICloneable.h  (+128 more)
core/atom/: node_bindings.cpp  node_bindings_mac.cpp  node_bindings_mac.h  node_bindings_win.cpp  node_bindings_win.h  node_includes.h
core/silkedit_node/: custom_node.cpp  custom_node.h
core/src/: document.rs  gap_buffer.rs  lib.rs
crashreporter/: CMakeLists.txt
crashreporter/patch/: breakpad_googletest_include.h.patch  common.gypi.patch  common.patch  crash_generation_client.patch  crash_generation_server.patch  crash_report_sender.patch  symbolic_constants_win.cc.patch
crashreporter/res/: crashreporter.rc
crashreporter/src/: HttpSendDump.cpp  HttpSendDump.h  constants.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
crashreporter/trans/: crashreporter_ja.ts
crashview/: CMakeLists.txt
crashview/patch/: exception_handler.patch
crashview/res/: crashview.rc
crashview/src/: crashreport.cpp  crashreport.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
node/: CMakeLists.txt  node_main.cc
src/: API.cpp  API.h  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  App.cpp  App.h  BOMComboBox.cpp  BOMComboBox.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  CommandAction.cpp  CommandAction.h  CommandArgument.cpp  CommandArgument.h  CommandEvent.cpp  CommandEvent.h  CommandManager.cpp  CommandManager.h  CommandService.cpp  CommandService.h  ConditionExpression.cpp  ConditionExpression.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  ConfigManager.cpp  ConfigManager.h  ConfigService.cpp  ConfigService.h  Console.cpp  Console.h  Console.ui  Constants.cpp  Constants.h  Context.cpp  Context.h  (+241 more)
src/app/: ConfigManager.cpp  ConfigManager.h
src/atom/: node_bindings.cpp  node_bindings.h  node_bindings_mac.cpp  node_bindings_mac.h  node_includes.h
src/breakpad/: crash_handler.cpp  crash_handler.h  stringconv.cpp  stringconv.h
src/bridge/: Handler.cpp  Handler.h  JSStaticObject.h
src/commands/: ChangeModeCommand.cpp  ChangeModeCommand.h  CloseAllTabsCommand.cpp  CloseAllTabsCommand.h  CloseFileCommand.cpp  CloseFileCommand.h  CloseOtherTabsCommand.cpp  CloseOtherTabsCommand.h  CloseTabCommand.cpp  CloseTabCommand.h  CopyCommand.cpp  CopyCommand.h  CrashCommand.cpp  CrashCommand.h  CutCommand.cpp  CutCommand.h  DeleteCommand.cpp  DeleteCommand.h  EvalAsRubyCommand.cpp  EvalAsRubyCommand.h  ICommand.h  MoveCursorCommand.cpp  MoveCursorCommand.h  NewFileCommand.cpp  NewFileCommand.h  OpenCommand.cpp  OpenCommand.h  OpenFileCommand.cpp  OpenFileCommand.h  OpenFindPanelCommand.cpp  OpenFindPanelCommand.h  PackageCommand.cpp  PackageCommand.h  PasteCommand.cpp  PasteCommand.h  PluginCommand.cpp  PluginCommand.h  RedoCommand.cpp  RedoCommand.h  ReopenLastClosedFileCommand.cpp  (+22 more)
src/core/: ConfigManager.cpp  ConfigManager.h  Constants.cpp  Constants.h  Document.cpp  Document.h  Encoding.cpp  Encoding.h  HistoryModel.cpp  HistoryModel.h  ICloneable.h  ICommand.h  IContext.cpp  IContext.h  IKeyEventFilter.h  IOperator.h  LanguageParser.cpp  LanguageParser.h  LineSeparator.cpp  LineSeparator.h  Metadata.cpp  Metadata.h  OSContext.cpp  OSContext.h  PListParser.cpp  PackageManager.cpp  PackageManager.h  Regexp.cpp  Regexp.h  Region.cpp  Region.h  Session.cpp  Session.h  Singleton.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  Theme.cpp  Theme.h  ThemeProvider.cpp  ThemeProvider.h  (+6 more)
src/plugin_service/: PluginService.cpp  PluginService.h
src/silkedit_node/: custom_node.cpp  custom_node.h
src/sk/: main.rs
src/util/: DialogUtils.cpp  DialogUtils.h  YamlUtil.cpp  YamlUtil.h  YamlUtils.cpp  YamlUtils.h
test/: CMakeLists.txt
test/core/: BOMTest.cpp  CMakeLists.txt  DocumentTest.cpp  LanguageParserTest.cpp  LineSeparatorTest.cpp  PackageTest.cpp  QObjectUtilTest.cpp  RegexpTest.cpp  RegionTest.cpp  SyntaxHighlighterBenchmark.cpp  SyntaxHighlighterTest.cpp  TextCursorTest.cpp  TextEditLogicTest.cpp  TextEditViewLogicTest.cpp  ThemeTest.cpp  UtilTest.cpp  V8UtilTest.cpp
test/grammer_test_files/: c.h  clojure.clj  cpp.cpp  csharp.cs  erb.erb  html.html  java.java  java_properties.properties  js_erb.js.erb  markdown.md  nant.build  objective-c.m  objective-cpp.mm  perl6.p6  php.php  property-list.plist  rjs.rjs  ruby.rb  sbt.sbt  scala.scala  shellscript.sh  sql.sql  sql_erb.sql.erb  strings.strings
test/src/: LanguageParserTest.cpp  LineSeparatorTest.cpp  RegexpTest.cpp  RegionTest.cpp  SyntaxHighlighterTest.cpp  TextEditViewLogicTest.cpp  ThemeTest.cpp
test/testdata/: Benchmark_1007.cpp  Benchmark_12867.cpp  C++.tmLanguage  Test.tmTheme  cppFunctionTest.cpp  cppFunctionTest.cpp.res  cppTest.cpp.res  includeBaseWithParent.cpp  includeBaseWithParent.cpp.res  includeBaseWithoutParent.cpp  includeBaseWithoutParent.cpp.res  javaProperties.properties  plist.tmlang.res  plist2.tmlang.res  test.txt
test/util/: TestUtil.cpp  TestUtil.h
test/widgets/: CMakeLists.txt
widgets/: CMakeLists.txt
widgets/src/: AboutDialog.cpp  (+86 more)
(+165 files in other folders)
